# SURF

./: .env.example  .gitignore  README.md  pyproject.toml
rubrics/: rebuttal.yaml
surf/: __init__.py
surf/cli/: main.py
surf/clustering/: __init__.py  cluster.py  embeddings.py  pseudo_sae.py  summarize.py
surf/core/: __init__.py  models.py  streaming.py  utils.py  vllm_server.py
surf/em_loop/: __init__.py  buffer.py  cluster_mapper.py  judge.py  loop.py  prompts.py  sampling.py  sweep.py
surf/extraction/: __init__.py  batch.py  checkpoint.py  extractor.py  prompts.py
utils/: convert_json_embeddings.py  hf_upload_config.py  top.py  upload_to_hf.py
